Stylesheet cleanup / fix calendar on mobile
This should make the calendar and forum index look the same on mobile as
it does on the desktop version.

--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -1,3 +1,26 @@
+#calendar {
+}
+
+#calendar_wrap {
+  padding: 20px;
+}
+
+#calendar table {
+  width: 100%;
+}
+
+#calendar tbody td {
+  text-align: center;
+}
+
+#calendar #next {
+  text-align: right;
+}
+
 .ec-calendar-header {
+  text-align: center;
+}
+
+.ec-day-names {
   text-align: center;
 }
