--- a/app/assets/stylesheets/style-mobile.css
+++ b/app/assets/stylesheets/style-mobile.css
@@ -63,14 +63,6 @@ textarea {
   margin-bottom: 20px;
 }
 
-tr {
-  background-color: white;
-}
-
-tr.alt {
-  background-color: #F0F0F0;
-}
-
 /* Header */
 
 #header-wrapper {
@@ -218,8 +210,7 @@ tr.alt {
 
 /* Page */
 
-#wrapper
-{
+#wrapper {
   overflow: hidden;
   padding-bottom: 40px;
 }
@@ -368,27 +359,6 @@ tr.alt {
   padding: 8px 6px;
 }
 
-/* Calendar */
-
-#calendar {
-}
-
-#calendar_wrap {
-  padding: 20px;
-}
-
-#calendar table {
-  width: 100%;
-}
-
-#calendar tbody td {
-  text-align: center;
-}
-
-#calendar #next {
-  text-align: right;
-}
-
 /* Footer */
 
 #footer {
@@ -420,7 +390,6 @@ tr.alt {
   margin: 0px auto;
 }
 
-#banner img
-{
+#banner img {
   border-radius: 8px;
 }
