--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -495,27 +495,6 @@ textarea {
 	display: inline-block;
 }
 
-/* Calendar */
-
-#calendar {
-}
-
-#calendar_wrap {
-	padding: 20px;
-}
-
-#calendar table {
-	width: 100%;
-}
-
-#calendar tbody td {
-	text-align: center;
-}
-
-#calendar #next {
-	text-align: right;
-}
-
 /* Footer */
 
 #footer {
